# ntfs-reader

./: .gitignore  Cargo.toml
.cursor/rules/: development-guidelines.mdc  journal-processing.mdc  mft-processing.mdc  ntfs-concepts.mdc  project-overview.mdc  windows-api-patterns.mdc
examples/: Cargo.toml  test_mft.rs
src/: file_info.rs  main.rs
