[package]
name = "ntfs-reader"
version = "0.4.2"
authors = ["bingbing980802@163.com"]
license = "MIT OR Apache-2.0"
edition = "2024"
description = "Read MFT and USN journal"
repository = "https://github.com/vbingbingv/ntfs-reader"
keywords = ["filesystem", "ntfs"]
categories = ["filesystem"]

[dependencies]
thiserror = "2.0"
binread = { version = "2.2", features = ["const_generics"] }
time = { version = "0.3" }
tracing = "0.1"

# For the journal
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Time",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_Threading",
] }
usn-journal-rs = "0.3.0"

[dev-dependencies]
tracing-subscriber = "0.3"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
